fix(74): Fix layout overflow and other issues (#79)
* fix about nav and overflow

* fix dividers and layout

* rearrange speaker styles

--- a/src/components/Schedule/Nav/index.css
+++ b/src/components/Schedule/Nav/index.css
@@ -32,5 +32,5 @@
 }
 
 .schedule-content-nav-divider {
-
+  margin-top: -2px;
 }
